[tool.poetry]
name = "better-version"
version = "0.1.0"
description = ""
authors = ["Alistair Schillert  <66818080+alistairschillert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
pytest = "8.2.2"
jupyterlab = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
